[package]
name = "calculator"
version = "0.1.0"
authors = ["Brychlikow <brychlikow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.4"
lazy_static = "1.4.0"
error-chain = "0.12.2"
rustyline = "6.0.0"
log = "0.4.8"
env_logger = "0.7.1"

[[bin]]
name = "bart"
path = "src/main.rs"
